--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,18 +30,43 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'androidx.preference:preference:1.1.0-alpha05'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.2.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation 'androidx.preference:preference:1.1.0'
 
+    //test 测试
+    testImplementation 'junit:junit:4.12'
+    testImplementation "org.robolectric:robolectric:4.3.1"
+    // AndroidTest
+    androidTestImplementation "androidx.test.uiautomator:uiautomator:2.2.0"
+    androidTestImplementation "org.hamcrest:hamcrest-library:1.3"
+    androidTestImplementation "androidx.test.ext:truth:1.2.0"
+    androidTestImplementation "androidx.test.ext:junit:1.1.1"
+    androidTestImplementation "androidx.test:rules:1.2.0"
+    androidTestImplementation "androidx.test:runner:1.2.0"
+    androidTestImplementation "androidx.test:core:1.2.0"
+    // mockito
+    testImplementation "org.mockito:mockito-core:3.1.0"
+    androidTestImplementation "org.mockito:mockito-android:3.1.0"
+    //espresso
+    androidTestImplementation "androidx.test.espresso:espresso-core:3.2.0"
+    androidTestImplementation "androidx.test.espresso:espresso-contrib:3.2.0"
+    androidTestImplementation "androidx.test.espresso:espresso-intents:3.2.0"
+    androidTestImplementation "androidx.test.espresso:espresso-accessibility:3.2.0"
+    androidTestImplementation "androidx.test.espresso:espresso-web:3.2.0"
+    androidTestImplementation "androidx.test.espresso.idling:idling-concurrent:3.2.0"
+    androidTestImplementation "androidx.test.espresso:espresso-idling-resource:3.2.0"
     // bar栏
     implementation 'com.jaeger.statusbarutil:library:1.5.1'
     //android material design
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'com.android.support:design:28.1.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    //coroutines 协程
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.2'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.2'
+    //kotlin
+    implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
     //lifecycle
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.1.0"
     implementation "android.arch.lifecycle:extensions:2.1.0"
     //dagger
     implementation 'com.google.dagger:dagger:2.24'
@@ -53,22 +78,22 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.6.2'
     implementation 'com.squareup.retrofit2:converter-gson:2.6.2'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.6.2'
+    implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
     //rxjava
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.13'
     //room
-    implementation "androidx.room:room-runtime:2.2.0"
-    kapt "androidx.room:room-compiler:2.2.0" // use kapt for Kotlin
-    implementation "androidx.room:room-rxjava2:2.2.0" // optional - RxJava support for Room
-    implementation "androidx.room:room-guava:2.2.0"
-    // optional - Guava support for Room, including Optional and ListenableFuture
-    testImplementation "androidx.room:room-testing:2.2.0" // Test helpers
+    implementation "androidx.room:room-runtime:2.2.1"
+    kapt "androidx.room:room-compiler:2.2.1" // use kapt for Kotlin
+    implementation "androidx.room:room-ktx:2.2.1"
+    implementation "androidx.room:room-rxjava2:2.2.1" // optional - RxJava support for Room
+    implementation "androidx.room:room-guava:2.2.1"
+// optional - Guava support for Room, including Optional and ListenableFuture
+    testImplementation "androidx.room:room-testing:2.2.1" // Test helpers
     //pinyin
     implementation 'com.github.promeg:tinypinyin:2.0.3' // TinyPinyin核心包，约80KB
     implementation 'com.github.promeg:tinypinyin-lexicons-android-cncity:2.0.3'
-    // 可选，适用于Android的中国地区词典
-    testImplementation "org.mockito:mockito-core:3.1.0"
-    androidTestImplementation "org.mockito:mockito-android:3.1.0"
+// 可选，适用于Android的中国地区词典
 
 
 }
