--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,12 +15,13 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar"
         tools:ignore="GoogleAppIndexingWarning">
+        <activity android:name=".view.activity.IntroActivity"
+            android:theme="@style/AppTheme.NoActionBar"/>
 
         <activity
             android:name=".view.activity.SettingsActivity"
             android:label="@string/title_activity_settings"
             android:launchMode="singleTask" />
-
         <activity
             android:name=".view.activity.MainActivity"
             android:theme="@style/AppTheme.StartTheme">
